# lab06

./: .travis.yml  CMakeLists.txt  ChangeLog.md  DESCRIPTION  README.md  script
formatter_lib/: Makefile  cmake_install.cmake
hello_world_application/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello_world.cpp
solver_application/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  Makefile  cmake_install.cmake  equation.cpp
solver_application/formatter_ex_lib/: Makefile  cmake_install.cmake
solver_application/formatter_ex_lib/formatter_lib/: Makefile  cmake_install.cmake
solver_application/solver_lib/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_lib/: Makefile  cmake_install.cmake
